FIX: vertical text alignement for table header.

--- a/resources/assets/less/components/DataGrid.less
+++ b/resources/assets/less/components/DataGrid.less
@@ -152,6 +152,7 @@ table.dataTable thead {
   .sorting:after, .sorting_asc:after, .sorting_desc:after {
     content: none;
   }
+  th { vertical-align: middle }
 }
 
 /*
